adding github auth. and set bookmarks back to /bookmarks

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ dj-database-url = "*"
 python-decouple = "*"
 whitenoise = "*"
 djangorestframework = "*"
+django-allauth = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
