--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ whitenoise = "*"
 djangorestframework = "*"
 django-allauth = "*"
 django-cors-headers = "*"
+graphene-django = "*"
 
 [dev-packages]
 
